examples/error-codes/syntax-error/SE-TCANON2-bad-static.c
// This program shouldn't compile
int main(void) {
  char* __restrict p;
  return 0;
}
