examples/error-codes/syntax-error/SE-TCANON2-bad-static.output
SE-TCANON2-bad-static.c:3:9: error: Unsupported reserved identifier __restrict (reserved variant of restrict).
  Syntax error (SE-TCANON2).
